fixed spacing

--- a/src/style.css
+++ b/src/style.css
@@ -523,7 +523,7 @@ footer a:hover {
 @media (max-width: 767px) {
   main {
     width: 100%;
-    grid-template-rows: 1fr 3fr 0.75fr;
+    grid-template-rows: 0.5fr 2fr 0.5fr;
   }
 
   ol {
@@ -563,7 +563,7 @@ footer a:hover {
   }
 
   #work-section {
-    padding-top: 20px;
+    margin-top: -100px;
   }
 
   .yelp-content {
@@ -587,10 +587,17 @@ footer a:hover {
     grid-template-areas: "media" "text";
   }
 
+  #starbucks-work {
+    margin-top: -100px;
+  }
+
+  #starbucks-text {
+    margin-top: -150px;
+  }
+
   .instagram-embed {
     grid-area: media;
-    height: 50%;
-    padding-top: 150px;
+    height: 75%;
     justify-self: center;
   }
 
@@ -620,7 +627,7 @@ footer a:hover {
   }
 
   .contact-container {
-    margin-top: 50px;
+    margin-top: -75px;
   }
 }
 
